# gr_tradinggame_client

./: README.md  config.py  crlf_to_lf.py  leaderboard.txt  pyproject.toml  solution.py  submit.py  test.py
src/gr_tradinggame/coding/: client.py
